Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/getting-started.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/getting-started.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-05 02:50+0000\n"
+"POT-Creation-Date: 2021-06-08 07:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -97,9 +97,8 @@ msgstr ""
 msgid "If you have multiple JDK's installed it is not certain Maven will pick up the expected java and you could end up with unexpected results.  You can verify which JDK Maven uses by running `mvn --version`."
 msgstr "複数の JDK をインストール済みで、Maven が意図した Java を使用するかわからない場合は、予期しない結果になることがあります。Maven が使用する JDK は、`mvn --version` コマンドで確認できます。"
 
-#. type: Named 'alt' AttributeList argument for macro 'image'
+#. type: Title ==
 #: upstream/_versions/main/guides/getting-started.adoc:48
-#: upstream/_versions/main/guides/getting-started.adoc:53
 #, no-wrap
 msgid "Architecture"
 msgstr "アーキテクチャ"
@@ -108,6 +107,13 @@ msgstr "アーキテクチャ"
 #: upstream/_versions/main/guides/getting-started.adoc:52
 msgid "In this guide, we create a straightforward application serving a `hello` endpoint. To demonstrate dependency injection, this endpoint uses a `greeting` bean."
 msgstr "このガイドでは、`hello` エンドポイントを提供する簡単なアプリケーションを作成します。依存性の注入を示すために、このエンドポイントでは `greeting` Bean を使用します。"
+
+#. type: Named 'alt' AttributeList argument for macro 'image'
+#: upstream/_versions/main/guides/getting-started.adoc:53
+#, fuzzy, no-wrap
+#| msgid "Architecture"
+msgid "Architecture,"
+msgstr "アーキテクチャ"
 
 #. type: Target for macro image
 #: upstream/_versions/main/guides/getting-started.adoc:53
