--- a/l10n/po/ja_JP/_versions/main/guides/kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka-streams.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-06-08 07:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -117,7 +117,6 @@ msgstr "これらの設定を併用することで、アプリケーションを
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_versions/main/guides/kafka-streams.adoc:51
-#: upstream/_versions/main/guides/kafka-streams.adoc:69
 #: upstream/_versions/main/guides/kafka-streams.adoc:811
 #, no-wrap
 msgid "Architecture"
@@ -157,6 +156,13 @@ msgstr "出力トピックを検査することで、データを調べること
 #: upstream/_versions/main/guides/kafka-streams.adoc:68
 msgid "The overall architecture looks like so:"
 msgstr "全体的なアーキテクチャはこんな感じです。"
+
+#. type: Named 'alt' AttributeList argument for macro 'image'
+#: upstream/_versions/main/guides/kafka-streams.adoc:69
+#, fuzzy, no-wrap
+#| msgid "Architecture"
+msgid "Architecture,"
+msgstr "アーキテクチャ"
 
 #. type: Target for macro image
 #: upstream/_versions/main/guides/kafka-streams.adoc:69
