--- a/l10n/po/ja_JP/_versions/main/guides/scripting.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/scripting.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-06-08 07:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -177,9 +177,8 @@ msgid ""
 "}\n"
 msgstr ""
 
-#. type: Named 'alt' AttributeList argument for macro 'image'
+#. type: Title ==
 #: upstream/_versions/main/guides/scripting.adoc:79
-#: upstream/_versions/main/guides/scripting.adoc:83
 #, no-wrap
 msgid "Architecture"
 msgstr "アーキテクチャ"
@@ -188,6 +187,13 @@ msgstr "アーキテクチャ"
 #: upstream/_versions/main/guides/scripting.adoc:82
 msgid "In this guide, we create a straightforward application serving a `hello` endpoint with a single source file, no additional build files like `pom.xml` or `build.gradle` needed. To demonstrate dependency injection, this endpoint uses a `greeting` bean."
 msgstr "このガイドでは、 `hello` エンドポイントを提供する簡単なアプリケーションを、 `pom.xml` や `build.gradle` のような追加のビルドファイルを必要とせず、単一のソースファイルで作成します。依存関係の注入を実証するために、このエンドポイントは `greeting` Beanを使用します。"
+
+#. type: Named 'alt' AttributeList argument for macro 'image'
+#: upstream/_versions/main/guides/scripting.adoc:83
+#, fuzzy, no-wrap
+#| msgid "Architecture"
+msgid "Architecture,"
+msgstr "アーキテクチャ"
 
 #. type: Target for macro image
 #: upstream/_versions/main/guides/scripting.adoc:83
