Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/amazon-lambda-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amazon-lambda-http.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-06-09 02:32+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -418,7 +418,7 @@ msgstr ""
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:243
-#: upstream/_versions/main/guides/amazon-lambda-http.adoc:267
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:268
 #, no-wrap
 msgid ""
 "@Path(\"/myresource\")\n"
@@ -445,7 +445,7 @@ msgstr ""
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:252
-#: upstream/_versions/main/guides/amazon-lambda-http.adoc:272
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:276
 #, no-wrap
 msgid "}\n"
 msgstr "}\n"
@@ -456,28 +456,415 @@ msgid "For the AWS REST API you can inject the AWS variables `com.amazonaws.serv
 msgstr "AWS REST APIでは、AWS変数 `com.amazonaws.services.lambda.runtime.Context` と `io.quarkus.amazon.lambda.http.model.AwsProxyRequestContext` を注入することができます。以下はその例です。"
 
 #. type: delimited block -
-#: upstream/_versions/main/guides/amazon-lambda-http.adoc:261
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:262
 #, no-wrap
 msgid ""
 "import javax.ws.rs.core.Context;\n"
 "import io.quarkus.amazon.lambda.http.model.AwsProxyRequestContext;\n"
+"import io.quarkus.amazon.lambda.http.model.AwsProxyRequest;\n"
 msgstr ""
 
 #. type: delimited block -
-#: upstream/_versions/main/guides/amazon-lambda-http.adoc:270
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:271
 #, no-wrap
 msgid ""
 "    @GET\n"
-"    public String req(@Context AwsProxyRequestContext req) { }\n"
+"    public String reqContext(@Context AwsProxyRequestContext req) { }\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:274
+#, no-wrap
+msgid ""
+"    @GET\n"
+"    public String req(@Context AwsProxyRequest req) { }\n"
 msgstr ""
 
 #. type: Title ==
-#: upstream/_versions/main/guides/amazon-lambda-http.adoc:274
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:278
 #, no-wrap
 msgid "Tracing with AWS XRay and GraalVM"
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/amazon-lambda-http.adoc:278
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:283
 msgid "If you are building native images, and want to use https://aws.amazon.com/xray[AWS X-Ray Tracing] with your lambda you will need to include `quarkus-amazon-lambda-xray` as a dependency in your pom.  The AWS X-Ray library is not fully compatible with GraalVM so we had to do some integration work to make this work."
 msgstr "ネイティブイメージをビルドしていて、Lambda で link:https://aws.amazon.com/xray[AWS X-Ray Tracing] を使いたい場合は、 `quarkus-amazon-lambda-xray` を依存関係として pom に含める必要があります。AWS X-Ray ライブラリは GraalVM との完全な互換性がないため、これを動作させるためにいくつかの統合作業をしなければなりませんでした。"
+
+#. type: Title ==
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:284
+#, no-wrap
+msgid "Security Integration"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:289
+msgid "When you invoke an HTTP request on the API Gateway, the Gateway turns that HTTP request into a JSON event document that is forwarded to a Quarkus Lambda.  The Quarkus Lambda parses this json and converts in into an internal representation of an HTTP request that can be consumed by any HTTP framework Quarkus supports (JAX-RS, servlet, Vert.x Web)."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:296
+msgid "API Gateway supports many different ways to securely invoke on your HTTP endpoints that are backed by Lambda and Quarkus.  If you enable it, Quarkus will automatically parse relevant parts of the https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-develop-integrations-lambda.html[event json document] and look for security based metadata and register a `java.security.Principal` internally that can be looked up in JAX-RS by injecting a `javax.ws.rs.core.SecurityContext`, via `HttpServletRequest.getUserPrincipal()` in servlet, and `RouteContext.user()` in Vert.x Web.  If you want more security information, the `Principal` object can be typecast to a class that will give you more information."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:298
+msgid "To enable this security feature, add this to your `application.properties` file:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:300
+#, no-wrap
+msgid "quarkus.lambda-http.enable-security=true\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:304
+msgid "Here's how its mapped:"
+msgstr ""
+
+#. type: Block title
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:305
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:334
+#, no-wrap
+msgid "HTTP `quarkus-amazon-lambda-http`"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:308
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:318
+#, no-wrap
+msgid "Auth Type"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:308
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:318
+#, no-wrap
+msgid "Principal Class"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:309
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:319
+#, no-wrap
+msgid "Json path of Principal Name"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:309
+#, no-wrap
+msgid "Cognito JWT"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:309
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:319
+#, no-wrap
+msgid "`io.quarkus.amazon.lambda.http.CognitoPrincipal`"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:310
+#, no-wrap
+msgid "`requestContext.authorizer.jwt.claims.cognito:username`"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:310
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:320
+#, no-wrap
+msgid "IAM"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:310
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:320
+#, no-wrap
+msgid "`io.quarkus.amazon.lambda.http.IAMPrincipal`"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:311
+#, no-wrap
+msgid "`requestContext.authorizer.iam.userId`"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:311
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:321
+#, no-wrap
+msgid "Custom Lambda"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:311
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:321
+#, no-wrap
+msgid "`io.quarkus.amazon.lambda.http.CustomPrincipal`"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:313
+#, no-wrap
+msgid "`requestContext.authorizer.lambda.principalId`"
+msgstr ""
+
+#. type: Block title
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:315
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:375
+#, no-wrap
+msgid "REST `quarkus-amazon-lambda-rest`"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:319
+#, no-wrap
+msgid "Cognito"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:320
+#, no-wrap
+msgid "`requestContext.authorizer.claims.cognito:username`"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:321
+#, no-wrap
+msgid "`requestContext.identity.user`"
+msgstr ""
+
+#. type: Table
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:323
+#, no-wrap
+msgid "`requestContext.authorizer.principalId`"
+msgstr ""
+
+#. type: Title ==
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:325
+#, no-wrap
+msgid "Custom Security Integration"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:333
+msgid "The default support for AWS security only maps the principal name to Quarkus security APIs and does nothing to map claims or roles or permissions.  You have can full control how security metadata in the lambda HTTP event is mapped to Quarkus security APIs using implementations of the `io.quarkus.amazon.lambda.http.LambdaIdentityProvider` interface.  By implementing this interface, you can do things like define role mappings for your principal or publish additional attributes provided by IAM or Cognito or your Custom Lambda security integration."
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:338
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:379
+#, no-wrap
+msgid "package io.quarkus.amazon.lambda.http;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:348
+#, no-wrap
+msgid ""
+"/**\n"
+" * Helper interface that removes some boilerplate for creating\n"
+" * an IdentityProvider that processes APIGatewayV2HTTPEvent\n"
+" */\n"
+"public interface LambdaIdentityProvider extends IdentityProvider<LambdaAuthenticationRequest> {\n"
+"    @Override\n"
+"    default public Class<LambdaAuthenticationRequest> getRequestType() {\n"
+"        return LambdaAuthenticationRequest.class;\n"
+"    }\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:358
+#, no-wrap
+msgid ""
+"    @Override\n"
+"    default Uni<SecurityIdentity> authenticate(LambdaAuthenticationRequest request, AuthenticationRequestContext context) {\n"
+"        APIGatewayV2HTTPEvent event = request.getEvent();\n"
+"        SecurityIdentity identity = authenticate(event);\n"
+"        if (identity == null) {\n"
+"            return Uni.createFrom().optional(Optional.empty());\n"
+"        }\n"
+"        return Uni.createFrom().item(identity);\n"
+"    }\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:370
+#, no-wrap
+msgid ""
+"    /**\n"
+"     * You must override this method unless you directly override\n"
+"     * IdentityProvider.authenticate\n"
+"     *\n"
+"     * @param event\n"
+"     * @return\n"
+"     */\n"
+"    default SecurityIdentity authenticate(APIGatewayV2HTTPEvent event) {\n"
+"        throw new IllegalStateException(\"You must override this method or IdentityProvider.authenticate\");\n"
+"    }\n"
+"}\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:374
+msgid "For HTTP, the important method to override is `LambdaIdentityProvider.authenticate(APIGatewayV2HTTPEvent event)`.  From this you will allocate a SecurityIdentity based on how you want to map security data from `APIGatewayV2HTTPEvent`"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:381
+#, no-wrap
+msgid "import java.util.Optional;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:383
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:424
+#, no-wrap
+msgid "import com.amazonaws.services.lambda.runtime.events.APIGatewayV2HTTPEvent;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:389
+#, no-wrap
+msgid ""
+"import io.quarkus.amazon.lambda.http.model.AwsProxyRequest;\n"
+"import io.quarkus.security.identity.AuthenticationRequestContext;\n"
+"import io.quarkus.security.identity.IdentityProvider;\n"
+"import io.quarkus.security.identity.SecurityIdentity;\n"
+"import io.smallrye.mutiny.Uni;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:396
+#, no-wrap
+msgid ""
+"/**\n"
+" * Helper interface that removes some boilerplate for creating\n"
+" * an IdentityProvider that processes APIGatewayV2HTTPEvent\n"
+" */\n"
+"public interface LambdaIdentityProvider extends IdentityProvider<LambdaAuthenticationRequest> {\n"
+"...\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:408
+#, no-wrap
+msgid ""
+"    /**\n"
+"     * You must override this method unless you directly override\n"
+"     * IdentityProvider.authenticate\n"
+"     *\n"
+"     * @param event\n"
+"     * @return\n"
+"     */\n"
+"    default SecurityIdentity authenticate(AwsProxyRequest event) {\n"
+"        throw new IllegalStateException(\"You must override this method or IdentityProvider.authenticate\");\n"
+"    }\n"
+"}\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:412
+msgid "For REST, the important method to override is `LambdaIdentityProvider.authenticate(AwsProxyRequest event)`.  From this you will allocate a SecurityIdentity based on how you want to map security data from `AwsProxyRequest`."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:414
+msgid "Your implemented provider must be a CDI bean.  Here's an example:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:418
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:449
+#, no-wrap
+msgid "package org.acme;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:420
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:451
+#, no-wrap
+msgid "import java.security.Principal;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:422
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:453
+#, no-wrap
+msgid "import javax.enterprise.context.ApplicationScoped;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:429
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:460
+#, no-wrap
+msgid ""
+"import io.quarkus.amazon.lambda.http.LambdaIdentityProvider;\n"
+"import io.quarkus.security.identity.SecurityIdentity;\n"
+"import io.quarkus.security.runtime.QuarkusPrincipal;\n"
+"import io.quarkus.security.runtime.QuarkusSecurityIdentity;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:442
+#, no-wrap
+msgid ""
+"@ApplicationScoped\n"
+"public class CustomSecurityProvider implements LambdaIdentityProvider {\n"
+"    @Override\n"
+"    public SecurityIdentity authenticate(APIGatewayV2HTTPEvent event) {\n"
+"        if (event.getHeaders() == null || !event.getHeaders().containsKey(\"x-user\"))\n"
+"            return null;\n"
+"        Principal principal = new QuarkusPrincipal(event.getHeaders().get(\"x-user\"));\n"
+"        QuarkusSecurityIdentity.Builder builder = QuarkusSecurityIdentity.builder();\n"
+"        builder.setPrincipal(principal);\n"
+"        return builder.build();\n"
+"    }\n"
+"}\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:445
+msgid "Here's the same example, but with the AWS Gateway REST API:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:455
+#, no-wrap
+msgid "import io.quarkus.amazon.lambda.http.model.AwsProxyRequest;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:473
+#, no-wrap
+msgid ""
+"@ApplicationScoped\n"
+"public class CustomSecurityProvider implements LambdaIdentityProvider {\n"
+"    @Override\n"
+"    public SecurityIdentity authenticate(AwsProxyRequest event) {\n"
+"        if (event.getMultiValueHeaders() == null || !event.getMultiValueHeaders().containsKey(\"x-user\"))\n"
+"            return null;\n"
+"        Principal principal = new QuarkusPrincipal(event.getMultiValueHeaders().getFirst(\"x-user\"));\n"
+"        QuarkusSecurityIdentity.Builder builder = QuarkusSecurityIdentity.builder();\n"
+"        builder.setPrincipal(principal);\n"
+"        return builder.build();\n"
+"    }\n"
+"}\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:477
+msgid "Quarkus should automatically discover this implementation and use it instead of the default implementation discussed earlier."
+msgstr ""
+
+#. type: Title ==
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:478
+#, no-wrap
+msgid "Simple SAM Local Principal"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/amazon-lambda-http.adoc:482
+msgid "If you are testing your application with `sam local` you can hardcode a principal name to use when your application runs by setting the `QUARKUS_AWS_LAMBDA_FORCE_USER_NAME` environment variable"
+msgstr ""
