--- a/l10n/po/ja_JP/_versions/main/guides/amqp.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amqp.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-08 07:18+0000\n"
+"POT-Creation-Date: 2021-06-09 02:32+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -133,7 +133,7 @@ msgid ""
 "mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=amqp-quickstart \\\n"
-"    -Dextensions=\"amqp\" \\\n"
+"    -Dextensions=\"resteasy,amqp\" \\\n"
 "    -DnoExamples\n"
 "cd amqp-quickstart\n"
 msgstr ""
