Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/amazon-lambda-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amazon-lambda-http.adoc.po
@@ -793,7 +793,7 @@ msgstr ""
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:453
 #, no-wrap
 msgid "import javax.enterprise.context.ApplicationScoped;\n"
-msgstr ""
+msgstr "import javax.enterprise.context.ApplicationScoped;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:429
