--- a/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-03-30 14:04+0000\n"
+"POT-Creation-Date: 2021-06-09 15:12+0000\n"
 "PO-Revision-Date: 2021-03-12 12:41+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -149,10 +149,14 @@ msgstr "gradle を使っている場合は、以下のプラグインを `build.
 
 #. type: delimited block -
 #: upstream/_guides/cdi-reference.adoc:77
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "plugins {\n"
+#| "    id 'org.kordamp.gradle.jandex' version '0.6.0'\n"
+#| "}\n"
 msgid ""
 "plugins {\n"
-"    id 'org.kordamp.gradle.jandex' version '0.6.0'\n"
+"    id 'org.kordamp.gradle.jandex' version '0.10.0'\n"
 "}\n"
 msgstr ""
 "plugins {\n"
