--- a/l10n/po/ja_JP/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc.po
@@ -43,13 +43,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:13
 msgid "If you are not using 1.13 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13 migration guide]."
-msgstr ""
+msgstr "まだ1.13を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:14
 #, no-wrap
 msgid "Full changelog"
-msgstr ""
+msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:17
@@ -81,34 +81,34 @@ msgstr ""
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:27
 #, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:30
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:32
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:34
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:35
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:36
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:37
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
