--- a/l10n/po/ja_JP/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13.7.Final released - Maintenance release'\n"
@@ -34,11 +34,19 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 1.13.7.Final released - Maintenance release'\n"
+"date: 2021-06-09\n"
+"tags: release\n"
+"synopsis: 1.13.7.Finalは、1.13リリーストレインのメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:11
+#, fuzzy
 msgid "And here comes 1.13.7.Final, our (most probably!) last round of bugfixes for the 1.13 release."
-msgstr ""
+msgstr "1.13リリースのための（おそらく！）最後のバグフィックスである1.13.7.Finalが登場します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:13
@@ -53,29 +61,33 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:17
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.13.7.Final[the full changelog of 1.13.7.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.7.Final[1.13.7.Finalの完全な変更履歴はGitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:18
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "2.0 coming soon"
-msgstr ""
+msgstr "2.0が間もなく登場"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:22
+#, fuzzy
 msgid "We will soon start a new chapter with Quarkus 2.0.0.Final.  It should be released by the end of this month."
-msgstr ""
+msgstr "もうすぐQuarkus 2.0.0.Finalで新しい章が始まります。今月末にはリリースされる予定です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:24
+#, fuzzy
 msgid "You can find more information in https://groups.google.com/g/quarkus-dev/c/18Ocz1wtKjo/m/tuRVB97aAAAJ[the announcement]."
-msgstr ""
+msgstr "詳細は link:https://groups.google.com/g/quarkus-dev/c/18Ocz1wtKjo/m/tuRVB97aAAAJ[発表資料]をご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:26
+#, fuzzy
 msgid "Please test your applications with our latest 2.0.0.CR3 and report back!"
-msgstr ""
+msgstr "最新の2.0.0.CR3でアプリケーションをテストして、報告してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:27
