Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-grpc-config-group-config-ssl-client-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-grpc-config-group-config-ssl-client-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:37+0000\n"
+"POT-Creation-Date: 2021-06-11 02:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-ssl-client-config.adoc:16
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-ssl-client-config_quarkus.grpc.clients.-service-name-.ssl.certificate]]`link:#quarkus-grpc-config-group-config-ssl-client-config_quarkus.grpc.clients.-service-name-.ssl.certificate[quarkus.grpc.clients.\"service-name\".ssl.certificate]`\n"
+"[[quarkus-grpc-config-group-config-ssl-client-config_quarkus.grpc.clients.-client-name-.ssl.certificate]]`link:#quarkus-grpc-config-group-config-ssl-client-config_quarkus.grpc.clients.-client-name-.ssl.certificate[quarkus.grpc.clients.\"client-name\".ssl.certificate]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -63,7 +63,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-ssl-client-config.adoc:25
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-ssl-client-config_quarkus.grpc.clients.-service-name-.ssl.key]]`link:#quarkus-grpc-config-group-config-ssl-client-config_quarkus.grpc.clients.-service-name-.ssl.key[quarkus.grpc.clients.\"service-name\".ssl.key]`\n"
+"[[quarkus-grpc-config-group-config-ssl-client-config_quarkus.grpc.clients.-client-name-.ssl.key]]`link:#quarkus-grpc-config-group-config-ssl-client-config_quarkus.grpc.clients.-client-name-.ssl.key[quarkus.grpc.clients.\"client-name\".ssl.key]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -75,7 +75,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-ssl-client-config.adoc:34
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-ssl-client-config_quarkus.grpc.clients.-service-name-.ssl.trust-store]]`link:#quarkus-grpc-config-group-config-ssl-client-config_quarkus.grpc.clients.-service-name-.ssl.trust-store[quarkus.grpc.clients.\"service-name\".ssl.trust-store]`\n"
+"[[quarkus-grpc-config-group-config-ssl-client-config_quarkus.grpc.clients.-client-name-.ssl.trust-store]]`link:#quarkus-grpc-config-group-config-ssl-client-config_quarkus.grpc.clients.-client-name-.ssl.trust-store[quarkus.grpc.clients.\"client-name\".ssl.trust-store]`\n"
 "\n"
 "[.description]\n"
 "--\n"
