--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-26 02:44+0000\n"
+"POT-Creation-Date: 2021-06-11 02:30+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:16
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.port]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.port[quarkus.grpc.clients.\"service-name\".port]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.port]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.port[quarkus.grpc.clients.\"client-name\".port]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -73,7 +73,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:25
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.host]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.host[quarkus.grpc.clients.\"service-name\".host]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.host]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.host[quarkus.grpc.clients.\"client-name\".host]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -102,7 +102,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:34
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.ssl.certificate]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.ssl.certificate[quarkus.grpc.clients.\"service-name\".ssl.certificate]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.ssl.certificate]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.ssl.certificate[quarkus.grpc.clients.\"client-name\".ssl.certificate]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -122,7 +122,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:43
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.ssl.key]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.ssl.key[quarkus.grpc.clients.\"service-name\".ssl.key]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.ssl.key]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.ssl.key[quarkus.grpc.clients.\"client-name\".ssl.key]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -134,7 +134,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:52
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.ssl.trust-store]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.ssl.trust-store[quarkus.grpc.clients.\"service-name\".ssl.trust-store]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.ssl.trust-store]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.ssl.trust-store[quarkus.grpc.clients.\"client-name\".ssl.trust-store]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -146,7 +146,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:61
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.plain-text]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.plain-text[quarkus.grpc.clients.\"service-name\".plain-text]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.plain-text]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.plain-text[quarkus.grpc.clients.\"client-name\".plain-text]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -166,7 +166,7 @@ msgstr "boolean"
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:70
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.keep-alive-time]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.keep-alive-time[quarkus.grpc.clients.\"service-name\".keep-alive-time]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.keep-alive-time]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.keep-alive-time[quarkus.grpc.clients.\"client-name\".keep-alive-time]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -189,7 +189,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:80
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.flow-control-window]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.flow-control-window[quarkus.grpc.clients.\"service-name\".flow-control-window]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.flow-control-window]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.flow-control-window[quarkus.grpc.clients.\"client-name\".flow-control-window]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -201,7 +201,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:89
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.idle-timeout]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.idle-timeout[quarkus.grpc.clients.\"service-name\".idle-timeout]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.idle-timeout]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.idle-timeout[quarkus.grpc.clients.\"client-name\".idle-timeout]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -213,7 +213,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:99
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.keep-alive-timeout]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.keep-alive-timeout[quarkus.grpc.clients.\"service-name\".keep-alive-timeout]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.keep-alive-timeout]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.keep-alive-timeout[quarkus.grpc.clients.\"client-name\".keep-alive-timeout]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -225,7 +225,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:109
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.keep-alive-without-calls]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.keep-alive-without-calls[quarkus.grpc.clients.\"service-name\".keep-alive-without-calls]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.keep-alive-without-calls]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.keep-alive-without-calls[quarkus.grpc.clients.\"client-name\".keep-alive-without-calls]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -244,7 +244,7 @@ msgstr "`false`"
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:118
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.max-hedged-attempts]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.max-hedged-attempts[quarkus.grpc.clients.\"service-name\".max-hedged-attempts]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-hedged-attempts]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-hedged-attempts[quarkus.grpc.clients.\"client-name\".max-hedged-attempts]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -263,7 +263,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:127
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.max-retry-attempts]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.max-retry-attempts[quarkus.grpc.clients.\"service-name\".max-retry-attempts]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-retry-attempts]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-retry-attempts[quarkus.grpc.clients.\"client-name\".max-retry-attempts]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -275,7 +275,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:136
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.max-trace-events]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.max-trace-events[quarkus.grpc.clients.\"service-name\".max-trace-events]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-trace-events]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-trace-events[quarkus.grpc.clients.\"client-name\".max-trace-events]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -287,7 +287,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:145
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.max-inbound-message-size]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.max-inbound-message-size[quarkus.grpc.clients.\"service-name\".max-inbound-message-size]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-inbound-message-size]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-inbound-message-size[quarkus.grpc.clients.\"client-name\".max-inbound-message-size]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -299,7 +299,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:154
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.max-inbound-metadata-size]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.max-inbound-metadata-size[quarkus.grpc.clients.\"service-name\".max-inbound-metadata-size]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-inbound-metadata-size]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-inbound-metadata-size[quarkus.grpc.clients.\"client-name\".max-inbound-metadata-size]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -311,7 +311,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:163
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.negotiation-type]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.negotiation-type[quarkus.grpc.clients.\"service-name\".negotiation-type]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.negotiation-type]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.negotiation-type[quarkus.grpc.clients.\"client-name\".negotiation-type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -329,7 +329,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:172
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.override-authority]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.override-authority[quarkus.grpc.clients.\"service-name\".override-authority]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.override-authority]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.override-authority[quarkus.grpc.clients.\"client-name\".override-authority]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -341,7 +341,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:181
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.per-rpc-buffer-limit]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.per-rpc-buffer-limit[quarkus.grpc.clients.\"service-name\".per-rpc-buffer-limit]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.per-rpc-buffer-limit]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.per-rpc-buffer-limit[quarkus.grpc.clients.\"client-name\".per-rpc-buffer-limit]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -360,7 +360,7 @@ msgstr "long"
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:190
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.retry]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.retry[quarkus.grpc.clients.\"service-name\".retry]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.retry]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.retry[quarkus.grpc.clients.\"client-name\".retry]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -372,7 +372,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:199
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.retry-buffer-size]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.retry-buffer-size[quarkus.grpc.clients.\"service-name\".retry-buffer-size]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.retry-buffer-size]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.retry-buffer-size[quarkus.grpc.clients.\"client-name\".retry-buffer-size]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -384,7 +384,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:208
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.user-agent]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.user-agent[quarkus.grpc.clients.\"service-name\".user-agent]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.user-agent]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.user-agent[quarkus.grpc.clients.\"client-name\".user-agent]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -396,7 +396,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:217
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.load-balancing-policy]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.load-balancing-policy[quarkus.grpc.clients.\"service-name\".load-balancing-policy]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.load-balancing-policy]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.load-balancing-policy[quarkus.grpc.clients.\"client-name\".load-balancing-policy]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -414,7 +414,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:226
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.compression]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.compression[quarkus.grpc.clients.\"service-name\".compression]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.compression]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.compression[quarkus.grpc.clients.\"client-name\".compression]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -426,7 +426,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc:236
 #, no-wrap
 msgid ""
-"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.deadline]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-service-name-.deadline[quarkus.grpc.clients.\"service-name\".deadline]`\n"
+"[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.deadline]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.deadline[quarkus.grpc.clients.\"client-name\".deadline]`\n"
 "\n"
 "[.description]\n"
 "--\n"
