--- a/l10n/po/ja_JP/_versions/main/guides/grpc-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/grpc-getting-started.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-05 02:50+0000\n"
+"POT-Creation-Date: 2021-06-11 02:27+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -488,7 +488,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/grpc-getting-started.adoc:269
-msgid "Inject the service and configure its name. The service name is used in the application configuration. If not specified then the field name is used instead: `hello` in this particular case."
+msgid "Inject the service and configure its name. The name is used in the application configuration. If not specified then the field name is used instead: `hello` in this particular case."
 msgstr ""
 
 #. type: Plain text
@@ -514,7 +514,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/grpc-getting-started.adoc:281
-msgid "`hello` is the name of the service used in the `@GrpcClient` annotation."
+msgid "`hello` is the name used in the `@GrpcClient` annotation."
 msgstr ""
 
 #. type: Plain text
