Apply translation memory

--- a/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
@@ -447,7 +447,7 @@ msgstr "多くの場合、Kubernetes API サーバーにアクセスするには
 #: upstream/_guides/kubernetes-client.adoc:264
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:270
