--- a/l10n/po/ja_JP/_guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-web.adoc.po
@@ -423,7 +423,7 @@ msgstr "生成された OpenAPI スキーマドキュメントが表示されま
 #: upstream/_guides/spring-web.adoc:231 upstream/_guides/spring-web.adoc:314
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: delimited block -
 #: upstream/_guides/spring-web.adoc:268
