--- a/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm.adoc.po
@@ -1511,6 +1511,8 @@ msgid ""
 "    @Inject\n"
 "    EntityManager entityManager;\n"
 msgstr ""
+"    @Inject\n"
+"    EntityManager entityManager;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:776
