--- a/l10n/po/ja_JP/_versions/1.11/guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/rest-client.adoc.po
@@ -275,6 +275,9 @@ msgid ""
 "@RegisterRestClient\n"
 "public interface CountriesService {\n"
 msgstr ""
+"@Path(\"/v2\")\n"
+"@RegisterRestClient\n"
+"public interface CountriesService {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/rest-client.adoc:133
@@ -445,6 +448,8 @@ msgid ""
 "@Path(\"/country\")\n"
 "public class CountriesResource {\n"
 msgstr ""
+"@Path(\"/country\")\n"
+"public class CountriesResource {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/rest-client.adoc:227
@@ -456,6 +461,9 @@ msgid ""
 "    @RestClient\n"
 "    CountriesService countriesService;\n"
 msgstr ""
+"    @Inject\n"
+"    @RestClient\n"
+"    CountriesService countriesService;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/rest-client.adoc:235
