--- a/l10n/po/ja_JP/_versions/1.11/guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/spring-web.adoc.po
@@ -413,7 +413,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/spring-web.adoc:314
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/spring-web.adoc:268
