--- a/l10n/po/ja_JP/_versions/1.7/guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/rest-json.adoc.po
@@ -783,7 +783,7 @@ msgstr "今回はマメ科の一覧が表示されました。"
 #: upstream/_versions/1.7/guides/rest-json.adoc:407
 #, no-wrap
 msgid "Being reactive"
-msgstr ""
+msgstr "リアクティブであること"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/rest-json.adoc:411
