--- a/l10n/po/ja_JP/_versions/main/guides/grpc-service-consumption.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/grpc-service-consumption.adoc.po
@@ -250,7 +250,7 @@ msgstr ""
 #: upstream/_versions/main/guides/grpc-service-consumption.adoc:105
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/grpc-service-consumption.adoc:107
