--- a/l10n/po/ja_JP/_versions/main/guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-client.adoc.po
@@ -279,6 +279,9 @@ msgid ""
 "@RegisterRestClient\n"
 "public interface CountriesService {\n"
 msgstr ""
+"@Path(\"/v2\")\n"
+"@RegisterRestClient\n"
+"public interface CountriesService {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/rest-client.adoc:133
@@ -501,6 +504,8 @@ msgid ""
 "@Path(\"/country\")\n"
 "public class CountriesResource {\n"
 msgstr ""
+"@Path(\"/country\")\n"
+"public class CountriesResource {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/rest-client.adoc:267
@@ -512,6 +517,9 @@ msgid ""
 "    @RestClient\n"
 "    CountriesService countriesService;\n"
 msgstr ""
+"    @Inject\n"
+"    @RestClient\n"
+"    CountriesService countriesService;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/rest-client.adoc:275
