--- a/l10n/po/ja_JP/_versions/main/guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-json.adoc.po
@@ -919,7 +919,7 @@ msgstr "今回はマメ科の一覧が表示されました。"
 #: upstream/_versions/main/guides/rest-json.adoc:478
 #, no-wrap
 msgid "Being reactive"
-msgstr ""
+msgstr "リアクティブであること"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-json.adoc:482
