--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -1608,6 +1608,8 @@ msgid ""
 "    @Inject\n"
 "    EntityManager entityManager;\n"
 msgstr ""
+"    @Inject\n"
+"    EntityManager entityManager;\n"
 
 #. type: delimited block -
 #: upstream/_guides/hibernate-orm.adoc:778
