--- a/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
@@ -1278,7 +1278,7 @@ msgstr "生成された OpenAPI スキーマドキュメントが表示されま
 #: upstream/_guides/reactive-routes.adoc:702
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-routes.adoc:645
