--- a/l10n/po/ja_JP/_guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client.adoc.po
@@ -269,6 +269,9 @@ msgid ""
 "@RegisterRestClient\n"
 "public interface CountriesService {\n"
 msgstr ""
+"@Path(\"/v2\")\n"
+"@RegisterRestClient\n"
+"public interface CountriesService {\n"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client.adoc:133
@@ -488,6 +491,8 @@ msgid ""
 "@Path(\"/country\")\n"
 "public class CountriesResource {\n"
 msgstr ""
+"@Path(\"/country\")\n"
+"public class CountriesResource {\n"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client.adoc:267 upstream/_guides/rest-client.adoc:375
@@ -498,6 +503,9 @@ msgid ""
 "    @RestClient\n"
 "    CountriesService countriesService;\n"
 msgstr ""
+"    @Inject\n"
+"    @RestClient\n"
+"    CountriesService countriesService;\n"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client.adoc:275
