--- a/l10n/po/ja_JP/_versions/1.11/guides/kubernetes-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/kubernetes-client.adoc.po
@@ -434,7 +434,7 @@ msgstr "多くの場合、Kubernetes API サーバーにアクセスするには
 #: upstream/_versions/1.11/guides/kubernetes-client.adoc:262
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/kubernetes-client.adoc:268
