--- a/l10n/po/ja_JP/_versions/1.7/guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/rest-client.adoc.po
@@ -259,6 +259,9 @@ msgid ""
 "@RegisterRestClient\n"
 "public interface CountriesService {\n"
 msgstr ""
+"@Path(\"/v2\")\n"
+"@RegisterRestClient\n"
+"public interface CountriesService {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/rest-client.adoc:132
@@ -408,6 +411,8 @@ msgid ""
 "@Path(\"/country\")\n"
 "public class CountriesResource {\n"
 msgstr ""
+"@Path(\"/country\")\n"
+"public class CountriesResource {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/rest-client.adoc:210
@@ -419,6 +424,9 @@ msgid ""
 "    @RestClient\n"
 "    CountriesService countriesService;\n"
 msgstr ""
+"    @Inject\n"
+"    @RestClient\n"
+"    CountriesService countriesService;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/rest-client.adoc:219
