--- a/l10n/po/ja_JP/_versions/1.7/guides/topic/continuum.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/topic/continuum.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:4
@@ -30,22 +30,25 @@ msgid ""
 "permalink: /vision/continuum\n"
 "---\n"
 msgstr ""
+"layout: vision\n"
+"permalink: /vision/continuum\n"
+"---\n"
 
 #. type: Title =
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:7
 #, no-wrap
 msgid "The Imperative and Reactive Continuum"
-msgstr ""
+msgstr "命令型とリアクティブ Continuum"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:15
 msgid "For years, the client-server architecture has been the de-facto standard to build applications.  But a major shift happened.  The _one model rules them all_ age is over.  A new range of applications and architecture styles has emerged and impacts how code is written and how applications are deployed and executed.  HTTP microservices, reactive applications, message-driven microservices and serverless are now central players in modern systems."
-msgstr ""
+msgstr "何年もの間、このクライアントサーバーアーキテクチャーは、アプリケーションを構築するための事実上の標準でした。しかし、大きな変化が起こったのです。_1 つのモデルがすべてを支配していた_ 時代は終わりました。新しい一連のアプリケーションとアーキテクチャーのスタイルが登場し、これはコードの書き方やアプリケーションの展開と実行の仕方に影響を与えました。HTTP マイクロサービス、リアクティブアプリケーション、メッセージ駆動型マイクロサービス、サーバーレスが、現在のシステムの中心的な役割を果たすようになったのです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:18
 msgid "Quarkus has been designed with this new world in mind, and provides first-class support for these different paradigms.  Quarkus development model morphs to adapt itself to the type of application you are developing."
-msgstr ""
+msgstr "Quarkus は、この新しい世界を念頭に置いて設計されており、これらの異なるパラダイムに対してファーストクラスのサポートを提供しています。Quarkus の開発モデルは、開発中のアプリケーションの種類に合わせて変化します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:19
@@ -56,12 +59,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:24
 msgid "Let’s start with the basic: HTTP microservices.  In this context, you need to develop an HTTP endpoint, often called REST or CRUD.  You process incoming HTTP requests, and to do so you often need to rely on others services, such as databases, or another HTTP service."
-msgstr ""
+msgstr "まずは基本中の基本、HTTP マイクロサービスから始めましょう。これに関しては、HTTP エンドポイントを開発する必要があり、これはしばしば REST や CRUD と呼ばれます。受信した HTTP リクエストを処理しますが、そのためにはデータベースなどの他のサービスや別の HTTP サービスに依存する必要があることが多くなります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:27
 msgid "For this type of application, Quarkus relies on well-known standards such as JAX-RS, JPA and MicroProfile Rest Client.  Let's take a very simple application handling _fruits_. The code would be something like:"
-msgstr ""
+msgstr "このタイプのアプリケーションでは、Quarkus は JAX-RS、JPA、MicroProfile Rest Client などのよく知られた標準に依存しています。_果物_ を扱う非常にシンプルなアプリケーションを見てみましょう。コードは次のようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:34
@@ -72,6 +75,10 @@ msgid ""
 "@Consumes(\"application/json\")\n"
 "public class FruitResource {\n"
 msgstr ""
+"@Path(\"fruits\")\n"
+"@Produces(\"application/json\")\n"
+"@Consumes(\"application/json\")\n"
+"public class FruitResource {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:37
@@ -80,6 +87,8 @@ msgid ""
 "    @Inject\n"
 "    EntityManager entityManager;\n"
 msgstr ""
+"    @Inject\n"
+"    EntityManager entityManager;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:43
@@ -91,6 +100,11 @@ msgid ""
 "              .getResultList();\n"
 "    }\n"
 msgstr ""
+"    @GET\n"
+"    public List<Fruit> get() {\n"
+"        return entityManager.createNamedQuery(\"Fruits.findAll\", Fruit.class)\n"
+"              .getResultList();\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:53
@@ -106,6 +120,15 @@ msgid ""
 "        return entity;\n"
 "    }\n"
 msgstr ""
+"    @GET\n"
+"    @Path(\"{id}\")\n"
+"    public Fruit getSingle(@PathParam Integer id) {\n"
+"        Fruit entity = entityManager.find(Fruit.class, id);\n"
+"        if (entity == null) {\n"
+"            throw new WebApplicationException(\"Fruit with id of \" + id + \" does not exist.\", 404);\n"
+"        }\n"
+"        return entity;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:60
@@ -118,6 +141,12 @@ msgid ""
 "            throw new WebApplicationException(\"Id was invalidly set on request.\", 422);\n"
 "        }\n"
 msgstr ""
+"    @POST\n"
+"    @Transactional\n"
+"    public Response create(Fruit fruit) {\n"
+"        if (fruit.getId() != null) {\n"
+"            throw new WebApplicationException(\"Id was invalidly set on request.\", 422);\n"
+"        }\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:64
@@ -127,6 +156,9 @@ msgid ""
 "        return Response.ok(fruit).status(201).build();\n"
 "    }\n"
 msgstr ""
+"        entityManager.persist(fruit);\n"
+"        return Response.ok(fruit).status(201).build();\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:67
@@ -139,12 +171,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:72
 msgid "If you are a Java EE or Spring user, this development model should look familiar.  You expose a _resource_ containing methods annotated with `@GET`, `@POST`... to handle the different requests.  The _path_ is specified using the `@Path` annotation."
-msgstr ""
+msgstr "Java EE や Spring のユーザーであれば、この開発モデルは見覚えがあるはずです。さまざまなリクエストを処理するために `@GET`、`@POST` ... のアノテーションが付いたメソッドを含む _リソース_ を公開しています。_パスは_ `@Path` アノテーションを使って指定します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:75
 msgid "JPA users will recognize the `EntityManager` used to access the database.  Finally, methods requiring a transaction are simply annotated with `@Transactional`."
-msgstr ""
+msgstr "JPA ユーザーは、データベースへのアクセスに使用された `EntityManager` を認識します。最後に、トランザクションを必要とするメソッドには `@Transactional` が付けられています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:79
@@ -154,7 +186,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:81
 msgid "First declare your service as follows:"
-msgstr ""
+msgstr "まずは以下のようにサービスを宣言しましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:87
@@ -164,6 +196,9 @@ msgid ""
 "@RegisterRestClient\n"
 "public interface CountriesService {\n"
 msgstr ""
+"@Path(\"/v2\")\n"
+"@RegisterRestClient\n"
+"public interface CountriesService {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:93
@@ -175,16 +210,21 @@ msgid ""
 "    Set<Country> getByName(@PathParam(\"name\") String name);\n"
 "}\n"
 msgstr ""
+"    @GET\n"
+"    @Path(\"/name/{name}\")\n"
+"    @Produces(\"application/json\")\n"
+"    Set<Country> getByName(@PathParam(\"name\") String name);\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:96
 msgid "For each call you are intending to do, add a method and use annotations to describe the behavior."
-msgstr ""
+msgstr "意図している各呼び出しについて、メソッドを追加し、動作を記述するためにアノテーションを使用します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:98
 msgid "Then, in your resource, just use the `CountriesService`:"
-msgstr ""
+msgstr "そして、リソースの中で `CountriesService` を使いします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:103
@@ -193,6 +233,8 @@ msgid ""
 "@Path(\"/country\")\n"
 "public class CountriesResource {\n"
 msgstr ""
+"@Path(\"/country\")\n"
+"public class CountriesResource {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:107
@@ -202,6 +244,9 @@ msgid ""
 "    @RestClient\n"
 "    CountriesService countriesService;\n"
 msgstr ""
+"    @Inject\n"
+"    @RestClient\n"
+"    CountriesService countriesService;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:115
@@ -215,11 +260,18 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    @GET\n"
+"    @Path(\"/name/{name}\")\n"
+"    @Produces(MediaType.APPLICATION_JSON)\n"
+"    public Set<Country> name(@PathParam(\"name\") String name) {\n"
+"        return countriesService.getByName(name);\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:120
 msgid "But you may be wondering where the URL is configured as it's not in the code.  Remember, it must not be hard-coded because the url likely depends on the environment.  The URL is configured in the application configuration:"
-msgstr ""
+msgstr "しかし、URL　がコードの中に出てこないため、URL がどこに設定されているのか気になるかもしれません。URL は環境に依存している可能性が高いので、ハードコード化してはいけないことを覚えておいてください。URL はアプリケーションの設定で設定されています。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:125
@@ -228,32 +280,35 @@ msgid ""
 "# the format is interface-name/mp-rest/url=the-service-url\n"
 "org.acme.restclient.CountriesService/mp-rest/url=https://restcountries.eu/rest\n"
 msgstr ""
+"# the format is interface-name/mp-rest/url=the-service-url\n"
+"org.acme.restclient.CountriesService/mp-rest/url=https://restcountries.eu/rest\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:128
 msgid "The url can now be updated during the deployment or at launch time using system properties or environment variables."
-msgstr ""
+msgstr "システムのプロパティーや環境変数を使用して、デプロイ時や起動時に URL を更新できるようになりました。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:129
 #, no-wrap
 msgid "Being reactive"
-msgstr ""
+msgstr "リアクティブであること"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:133
 msgid "Application requirements have changed drastically over the last few years.  For any application to succeed in the era of cloud computing, big data or IoT, going reactive is increasingly becoming the architecture style to follow."
-msgstr ""
+msgstr "アプリケーションの要件は、ここ数年で大きく変化しています。クラウドコンピューティング、ビッグデータ、IoT の時代において成功するためには、リアクティブなアーキテクチャーを採用することがますます重要になってきています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:137
+#, fuzzy
 msgid "Today’s users embrace applications that have milliseconds of response time, 100% uptime, lower latency, push data instead of pull, higher throughput and elasticity.  However, these features are nearly impossible to achieve by using _yesterday’s software architecture_ without a huge investment in resources, infrastructure and tooling.  The world changed and having dozen of servers, long response time (> 500 ms), downtime due to maintenance or waterfalls of failures does not meet the expected user experience."
-msgstr ""
+msgstr "今日のユーザーは、ミリ秒単位の応答時間、100％のアップタイム、低いレイテンシー、プルではなくプッシュデータ、より高いスループットと弾力性を持つアプリケーションを採用しています。しかし、これらの機能は、リソース、インフラストラクチャー、ツールへの莫大な投資なしに、_これまでのソフトウェアアーキテクチャー_ で実現することはほぼ不可能です。世界は変わり、何十台というサーバーの使用、長い応答時間 (500ms 以上)、メンテナンスによるダウンタイム、障害の嵐という状況では、期待されるユーザーエクスペリエンスを満たすことはできません。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:140
 msgid "Quarkus stands with you on your path to reactive.  First, you can implement asynchronous HTTP endpoint as follows:"
-msgstr ""
+msgstr "Quarkus は、皆様のリアクティブへの道筋をサポートします。まず、以下のように非同期 HTTP エンドポイントを実装します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:148
@@ -269,13 +324,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:152
 msgid "Method actions can compose asynchronous operations and complete the result when everything is done without blocking threads.  This greatly improves resource consumption and elasticity."
-msgstr ""
+msgstr "メソッドアクションは、スレッドをブロックすることなく、すべてが行われたときに非同期操作を構成し、結果を完了させることができます。これにより、リソース消費と弾力性が大幅に向上します。"
 
 #.  TODO Async rest client, but does not seem to be working.
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:157
 msgid "But, what about streams? Generating a _server-sent event_ response with Quarkus is just as simple:"
-msgstr ""
+msgstr "しかし、ストリームについてはどうでしょうか? Quarkus を使用して _サーバーから送信されたイベント_ レスポンスを生成するのは簡単です。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:166
@@ -312,17 +367,17 @@ msgstr ""
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:183
 #, no-wrap
 msgid "Message-driven microservices"
-msgstr ""
+msgstr "メッセージ駆動型マイクロサービス"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:187
 msgid "However, HTTP characteristics prohibit implementing https://www.reactivemanifesto.org/[reactive systems], where all the components interact using asynchronous messages passing.  But no worries, Quarkus is perfectly suited to implement message-driven microservices and reactive systems."
-msgstr ""
+msgstr "しかし、HTTP の特性上、すべてのコンポーネントが非同期メッセージの通過を使用して相互作用する https://www.reactivemanifesto.org/[リアクティブシステム] を実装することはできません。しかし心配はいりません。Quarkus は、メッセージ駆動型のマイクロサービスやリアクティブシステムの実装に完全に適しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:189
 msgid "First, you can consume messages from various brokers such as AMQP or Kafka, and process these messages smoothly:"
-msgstr ""
+msgstr "まず、AMQP や Kafka などの各種ブローカーからのメッセージを消費し、スムーズに処理することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:194
@@ -331,6 +386,8 @@ msgid ""
 "@ApplicationScoped\n"
 "public class HealthDataProcessor {\n"
 msgstr ""
+"@ApplicationScoped\n"
+"public class HealthDataProcessor {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:201
@@ -343,16 +400,22 @@ msgid ""
 "  }\n"
 "}\n"
 msgstr ""
+"  @Incoming(\"health\")\n"
+"  @Outgoing(\"heartbeat\")\n"
+"  public double filtered(Health health) {\n"
+"    return health.getHeartbeat();\n"
+"  }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:206
 msgid "The `@Incoming` and `@Outgoing` annotations are part of https://www.smallrye.io/smallrye-reactive-messaging[Reactive Messaging].  They are used to express from which _stream_ you are consuming and to which stream you are sending.  Thanks to Reactive Messaging you can consume and send messages from and to different brokers and transports such as HTTP, Kafka, or http://camel.apache.org[Apache Camel]."
-msgstr ""
+msgstr "`@Incoming` および `@Outgoing` アノテーションは、https://www.smallrye.io/smallrye-reactive-messaging[Reactive Messaging] の一部です。これは、消費している _ストリーム_ から、送信しているストリームまでを表現するために使用されます。Reactive Messaging により、HTTP、Kafka、http://camel.apache.org[Apache Camel] などの異なるブローカーやトランスポートとの間でメッセージを消費したり、送信したりすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:209
 msgid "Sometimes you need more than just handling messages one by one.  You can also express your message processing logic using reactive programming as illustrated in the following snippet:"
-msgstr ""
+msgstr "メッセージを 1 つずつ処理するだけでは不十分な場合もあります。次のスニペットに示すように、リアクティブプログラミングを使ってメッセージ処理ロジックを表現することもできます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:222
@@ -379,18 +442,18 @@ msgstr ""
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:226
 #, no-wrap
 msgid "Functions as a Service and Serverless"
-msgstr ""
+msgstr "サービスとサーバーレスとしての関数"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:230
 msgid "Thanks to their stellar startup time and low memory usage, you can implement functions using Quarkus to be used in serverless environments.  If you are using AWS Lambda, your Quarkus function looks like:"
-msgstr ""
+msgstr "驚異的な起動時間と低いメモリー使用量により、Quarkus を使用して、サーバーレス環境で使用するように関数を実装することができます。AWS Lambda を使用している場合、Quarkus の関数は次のようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:234
 #, no-wrap
 msgid "public class HelloLambda implements RequestHandler<HelloRequest, String> {\n"
-msgstr ""
+msgstr "public class HelloLambda implements RequestHandler<HelloRequest, String> {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:237
@@ -399,6 +462,8 @@ msgid ""
 "    @Inject\n"
 "    HelloGreeter greeter;\n"
 msgstr ""
+"    @Inject\n"
+"    HelloGreeter greeter;\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:243
@@ -410,8 +475,13 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    @Override\n"
+"    public String handleRequest(HelloRequest request, Context context) {\n"
+"        return greeter.greet(request.firstName, request.lastName);\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/continuum.adoc:245
 msgid "You can use any of the Quarkus features in your function and benefit from the fast startup and low memory utilization. With Quarkus, you can embrace this new world without having to change your programming language."
-msgstr ""
+msgstr "Quarkus の機能のいずれかは関数で使用することができ、高速な起動と低メモリー使用率の恩恵を受けることができます。Quarkus を使用すると、プログラミング言語を変更することなく、この新しい世界を採用することができます。"
