--- a/l10n/po/ja_JP/_versions/1.7/guides/topic/standards.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/topic/standards.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/topic/standards.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/standards.adoc:4
