--- a/l10n/po/ja_JP/_versions/1.7/guides/vault-auth.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/vault-auth.adoc.po
@@ -461,7 +461,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/vault-auth.adoc:347
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/vault-auth.adoc:255
