--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-orm.adoc.po
@@ -1557,6 +1557,8 @@ msgid ""
 "    @Inject\n"
 "    EntityManager entityManager;\n"
 msgstr ""
+"    @Inject\n"
+"    EntityManager entityManager;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm.adoc:802
