--- a/l10n/po/ja_JP/_versions/main/guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-client-reactive.adoc.po
@@ -264,6 +264,9 @@ msgid ""
 "@RegisterRestClient\n"
 "public interface CountriesService {\n"
 msgstr ""
+"@Path(\"/v2\")\n"
+"@RegisterRestClient\n"
+"public interface CountriesService {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/rest-client-reactive.adoc:127
@@ -445,6 +448,8 @@ msgid ""
 "@Path(\"/country\")\n"
 "public class CountriesResource {\n"
 msgstr ""
+"@Path(\"/country\")\n"
+"public class CountriesResource {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/rest-client-reactive.adoc:243
