--- a/l10n/po/ja_JP/security.adoc.po
+++ b/l10n/po/ja_JP/security.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/security.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: Plain text
 #: upstream/security.adoc:5
