Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-client-config-group-kafka-dev-services-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-client-config-group-kafka-dev-services-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-04 02:55+0000\n"
+"POT-Creation-Date: 2021-06-16 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -84,7 +84,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The Kafka image to use. Note that only Red Panda images are supported. See https://vectorized.io/docs/quick-start-docker/ and https://hub.docker.com/r/vectorized/redpanda\n"
+"The Kafka image to use. Note that only Redpanda images are supported. See https://vectorized.io/docs/quick-start-docker/ and https://hub.docker.com/r/vectorized/redpanda\n"
 "--"
 msgstr ""
 
