--- a/l10n/po/ja_JP/_versions/main/guides/kafka-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka-dev-services.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-15 02:24+0000\n"
+"POT-Creation-Date: 2021-06-16 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -27,12 +27,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-dev-services.adoc:13
-msgid "Dev Services for Kafka automatically starts a Kafka broker in dev mode and when running tests.  So, you don't have to start a broker manually.  The application is configured automatically."
+msgid "If any Kafka-related extension is present (e.g. `quarkus-smallrye-reactive-messaging-kafka`), Dev Services for Kafka automatically starts a Kafka broker in dev mode and when running tests.  So, you don't have to start a broker manually.  The application is configured automatically."
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-dev-services.adoc:15
-msgid "Because starting a Kafka broker can be long, Dev Services for Kafka uses https://vectorized.io/redpanda[Red Panda], a Kafka compatible broker which starts in ~1 second."
+msgid "Because starting a Kafka broker can be long, Dev Services for Kafka uses https://vectorized.io/redpanda[Redpanda], a Kafka compatible broker which starts in ~1 second."
 msgstr ""
 
 #. type: Title ==
@@ -101,5 +101,5 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-dev-services.adoc:45
-msgid "Dev Services for Kafka only support Red Panda."
+msgid "Dev Services for Kafka only support Redpanda."
 msgstr ""
